k3s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3s-simple-website
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k3s-simple-website
  template:
    metadata:
      labels:
        app: k3s-simple-website
    spec:
      containers:
      - name: k3s-simple-website
        image: hashicorp/http-echo
        args:
        - "-text=banana"
