k3s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k3s-simple-website
  annotations:
    kubernetes.io/ingress.class: "traefik"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    # Change this to your own hostname
    - raspimaster.local
    secretName: k3s-simple-website
  rules:
  # Change this to your own hostname
  - host: raspimaster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: k3s-simple-website
          servicePort: 80
